--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,192 @@
 body {
-  background-color: #004E98;
+  max-width: 600px;
+  margin: auto;
+  left: 40%;
+  padding: 0;
+  width: 100%;
+  background: #393939;
+  background: linear-gradient(black, #393939);
 }
-input {
-  background-color: lightblue;
+
+.gameList {
+}
+
+.prettyList {
+  position: relative;
+  top: 35px;
+  color: #2ECC40;
+  li {color: lightgreen; font-family: Georgia, Times, sans-serif}
+}
+
+.searchBarButton {
+  position:relative;
+  right:0;
+  top:0;
+}
+
+.magicalWishlist{
+  width:320px;
+  p {color: lightgreen; font-size:24px}
+  ol {font-style:italic; font-family:Georgia, Times, serif; font-size:24px; color:lightgreen;}
+  ol li { }
+  ol li p {padding:8px; font-style:normal; font-family:Georgia, Times, sans-serif; font-size:13px; color:lightgreen; border-left: 1px solid #999;}
+  ol li p em {display:block;}
+}
+
+//.magicalWishlist{
+//  display: none
+//}
+
+.button1 {
+  display: inline;
+  color: cornsilk;
+  position: relative;
+  left: 45%;
+  margin: 10px;
+  padding: 0 20px;
+  text-align: center;
+  text-decoration: none;
+  font: bold 12px/25px Arial, sans-serif;
+  outline: none;
+
+  text-shadow: 1px 1px 1px rgba(255,255,255, .22);
+
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+
+  background-image: -webkit-linear-gradient(45deg, #2ECC40 0%, grey 100%);
+  background-image: linear-gradient(45deg, #2ECC40 0%, grey 100%);
+
+  -webkit-transition: all 0.15s ease;
+  -moz-transition: all 0.15s ease;
+  -o-transition: all 0.15s ease;
+  -ms-transition: all 0.15s ease;
+  transition: all 0.15s ease;
+}
+
+.addGameBtn{
+  display: inline;
+  color: cornsilk;
+  position: relative;
+  left: -5%;
+  margin: 5px;
+  padding: 0 10px;
+  text-align: center;
+  text-decoration: none;
+  font: bold 12px/25px Arial, sans-serif;
+  outline: none;
+
+  text-shadow: 1px 1px 1px rgba(255,255,255, .22);
+
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+
+  background-image: -webkit-linear-gradient(45deg, #2ECC40 0%, grey 100%);
+  background-image: linear-gradient(45deg, #2ECC40 0%, grey 100%);
+
+  -webkit-transition: all 0.15s ease;
+  -moz-transition: all 0.15s ease;
+  -o-transition: all 0.15s ease;
+  -ms-transition: all 0.15s ease;
+  transition: all 0.15s ease;
+}
+
+.pagination {
+  display:block;
+  position:relative;
+  left: 34%;
+  top: 20px;
+}
+
+form{
+  position: absolute;
+  top: 7%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: all 1s;
+  width: 50px;
+  height: 50px;
+  background: cornsilk;
+  box-sizing: border-box;
+  border-radius: 25px;
+  border: 4px solid #393939;
+  padding: 5px;
+  outline: none;
+}
+
+input{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;;
+  height: 42.5px;
+  line-height: 30px;
+  outline: 0;
+  border: 0;
+  display: none;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 0 20px;
+  outline: none;
+}
+
+.fa{
+  box-sizing: border-box;
+  padding: 10px;
+  width: 42.5px;
+  height: 42.5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  color: #393939;
+  text-align: center;
+  font-size: 1.2em;
+  transition: all 1s;
+  outline: none;
+}
+
+form:hover{
+  width: 200px;
+  cursor: pointer;
+}
+
+form:hover input{
   display: block;
-  height: 20px;
-  line-height: 20px;
-  padding-top: 0;
+}
+
+form:hover .fa{
+  background: #2ECC40;
+  color: white;
+}
+
+.btn, .btn2 {
+  position: relative;
+  left: 7%;
+  text-decoration: none;
+  color: cornsilk;
+  width: 50px;
+  height: 50px;
+  line-height: 45px;
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  background-image: -webkit-linear-gradient(45deg, #2ECC40 0%, grey 100%);
+  background-image: linear-gradient(45deg, #2ECC40 0%, grey 100%);
+  transition: .5s;
+  outline: none;
+}
+
+.btn:hover{
+  -webkit-transform: rotate(20deg);
+  -ms-transform: rotate(20deg);
+  transform: rotate(20deg);
+}
+
+.btn2:hover{
+  -webkit-transform: rotate(-20deg);
+  -ms-transform: rotate(-20deg);
+  transform: rotate(-20deg);
 }
